--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,6 +7,7 @@
     font-size : 30px;
     padding: 5px;
     box-sizing: border-box;
+    box-shadow: 0 3px 5px -1px rgba(0,0,0,.2), 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12);
 }
 
 .outerWrapper{
@@ -19,6 +20,27 @@
 }
 .row mat-form-field{
     padding: 15px 10px 0px 10px!important;
+}
+
+.side-option{
+    padding: 10px 50px 25px 20px;
+    width:100px;
+}
+
+#side-navigation-bar{
+    background-color : #0065ff;
+    color : #ffffff;
+}
+
+.side-opt-img{
+    width:35px;
+    float: left;
+    padding: 5px;
+}
+
+.side-opt-back-img{
+    width:35px;
+    padding: 10px 50px 0px 20px;
 }
 
 .footer-wrapper{
