--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,6 +35,13 @@
 
   <ng-scrollbar class="row currency-table">
     <table mat-table [dataSource]="latestRate" class="mat-elevation-z8" id="rateTable">
+      <ng-container matColumnDef="flag">
+        <th mat-header-cell *matHeaderCellDef class="table-header-lbl">Country</th>
+        <td mat-cell *matCellDef="let rateObj">
+           <img [src]="getFlagPath(rateObj.code)" alt="" class="flag-img" >
+        </td>
+      </ng-container>
+      
       <ng-container matColumnDef="code">
         <th mat-header-cell *matHeaderCellDef class="table-header-lbl">Currency Code</th>
         <td mat-cell *matCellDef="let rateObj"> {{rateObj.code}} </td>
