side bar disabled

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 
 <mat-sidenav-container>
 <mat-sidenav #sidenav (keydown.escape)="close('escape')" id="side-navigation-bar">    
-  <div >
+  <!-- <div >
     <img src="../assets/back-img.png" alt="" class="side-opt-back-img" (click)="close('toggle button')" >
-  </div>
+  </div> -->
   <div class="side-option">Convert</div>
   <div class="side-option">Latest</div>
   <div class="side-option">About Us</div>
@@ -12,7 +12,7 @@
 <mat-sidenav-content>
     
 <div class="header-wrapper">
-    <img src="../assets/side-option.png" alt="" class="side-opt-img" (click)="sidenav.open()" >
+    <!-- <img src="../assets/side-option.png" alt="" class="side-opt-img" (click)="sidenav.open()" > -->
     Exchange Currency
 </div>
 
